local/idp/httproute.yaml
# Copyright 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idp
  namespace: idp
spec:
  parentRefs:
    - name: shared-gateway
      namespace: csc-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /healthz
        - path:
            type: Exact
            value: /jwks.json
        - path:
            type: Exact
            value: /token
      backendRefs:
        - name: event-bus
          port: 5556
